# p4n4-api

./: API_DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
p4n4_api/: __init__.py  config.py  deps.py  main.py
p4n4_api/routes/: health.py  project.py  stacks.py
tests/: conftest.py  test_api.py
