[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p4n4-api"
version = "0.1.0"
description = "REST API gateway for the P4N4 platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RAISGA", email = "jraleman@raisga.com" }]
keywords = ["iot", "edge-ai", "rest", "api", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "p4n4-lib>=0.1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.27",
  "ruff>=0.4",
]

[project.scripts]
p4n4-api = "p4n4_api.main:run"

[project.urls]
Homepage = "https://github.com/raisga/p4n4-api"
Documentation = "https://github.com/raisga/p4n4-docs"
Issues = "https://github.com/raisga/p4n4-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["p4n4_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
